Fix nav alignment

--- a/css/style.css
+++ b/css/style.css
@@ -72,13 +72,13 @@ a h2:hover {color:inherit;}
 .Header__title {text-align:right; margin-bottom:10px; padding-right: 0px;}
 }
 .Subheader {display:table; width:100%; font-size:15px; background-color:#f2f2f2; border-bottom:1px solid #dedede; padding:0px; text-align:left;}
-.Subheader ul {list-style:none; margin:0px; padding:0; width:100%; display:block; }
-.Subheader ul li {display:inline-block; margin:0px 0px; padding:5px 0px;}
-.Subheader ul li a{ padding:4px 15px; font-weight:400; }
+.Subheader ul {list-style:none; margin:0px; padding:0; margin: 0; width:100%; display:block; }
+.Subheader ul li {display:inline-block; margin:0px; padding:5px 0px;}
+.Subheader ul li a{ margin: 0; padding:4px 10px; font-weight:400; }
 .Subheader ul li a:hover{ text-decoration:none; }
 @media (max-width: 768px) {
 .Subheader ul li {display:block; margin:0px 0px; padding:6px 0px; width:100%; border-bottom:1px solid #ccc;}
-.Subheader ul li a{width:100%;margin-left:-15px;padding:7px 15px; display:block;}
+.Subheader ul li a{width:100%;margin:0;padding:7px 15px; display:block;}
 }
 /* Pages */
 .Blog-Posts__item {display:table; margin: 0px; padding-bottom: 15px; }
